--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "eslint": "^9.16.0",
@@ -21,5 +20,6 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.12",
     "nanoid": "^3.3.8"
-  }
+  },
+  "description": ""
 }
