--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/server.js",
+    "start:dev": "nodemon ./src/server.js --watch ./src",
     "lint": "eslint ./src"
-  },
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
