--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "start:dev": "nodemon ./src/server.js --watch ./src",
-    "lint": "eslint ./src"
+  "start:prod": "NODE_ENV=production node ./src/server.js",
+  "start:dev": "nodemon ./src/server.js",
+  "lint": "eslint ./src"
 },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
     "eslint": "^9.16.0",
     "eslint-config-dicodingacademy": "^0.9.4",
     "globals": "^15.13.0",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "typescript-eslint": "^8.18.0"
   },
   "dependencies": {
